# wukong-recommendation

./: .gitignore  LICENSE  README.md  pyproject.toml
model/pytorch/: __init__.py  embedding.py  mlp.py  wukong.py
model/tensorflow/: __init__.py  embedding.py  mlp.py  wukong.py
pytorch/: __init__.py  mlp.py  wukong.py
tests/pytorch/: conftest.py  test_wukong.py
tests/tensorflow/: conftest.py  test_wukong.py
